# voucher

./: Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
data/00-D0-E5-F2-00-02/: voucher_00-D0-E5-F2-00-02.vch
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/minerva_voucher/: all.html  constant.ATTR_ASSERTION.html  constant.ATTR_CREATED_ON.html  constant.ATTR_DOMAIN_CERT_REVOCATION_CHECKS.html  constant.ATTR_EXPIRES_ON.html  constant.ATTR_IDEVID_ISSUER.html  constant.ATTR_LAST_RENEWAL_DATE.html  constant.ATTR_NONCE.html  constant.ATTR_PINNED_DOMAIN_CERT.html  constant.ATTR_PINNED_DOMAIN_PUBK.html  constant.ATTR_PINNED_DOMAIN_PUBK_SHA256.html  constant.ATTR_PRIOR_SIGNED_VOUCHER_REQUEST.html  constant.ATTR_PROXIMITY_REGISTRAR_CERT.html  constant.ATTR_PROXIMITY_REGISTRAR_PUBK.html  constant.ATTR_PROXIMITY_REGISTRAR_PUBK_SHA256.html  constant.ATTR_SERIAL_NUMBER.html  enum.Assertion.html  enum.Attr.html  enum.SignatureAlgorithm.html  enum.VoucherError.html  enum.VoucherType.html  fn.init_psa_crypto.html  index.html  macro.debug_println.html  macro.vch!.html  macro.vch.html  macro.vrq!.html  macro.vrq.html  sidebar-items.js  struct.Voucher.html  trait.Sign.html  trait.Validate.html  type.AttrDisc.html
doc/minerva_voucher/attr/: constant.ATTR_ASSERTION.html  constant.ATTR_CREATED_ON.html  constant.ATTR_DOMAIN_CERT_REVOCATION_CHECKS.html  constant.ATTR_EXPIRES_ON.html  constant.ATTR_IDEVID_ISSUER.html  constant.ATTR_LAST_RENEWAL_DATE.html  constant.ATTR_NONCE.html  constant.ATTR_PINNED_DOMAIN_CERT.html  constant.ATTR_PINNED_DOMAIN_PUBK.html  constant.ATTR_PINNED_DOMAIN_PUBK_SHA256.html  constant.ATTR_PRIOR_SIGNED_VOUCHER_REQUEST.html  constant.ATTR_PROXIMITY_REGISTRAR_CERT.html  constant.ATTR_PROXIMITY_REGISTRAR_PUBK.html  constant.ATTR_PROXIMITY_REGISTRAR_PUBK_SHA256.html  constant.ATTR_SERIAL_NUMBER.html  constant.CBOR_TAG_UNIX_TIME.html  enum.Assertion.html  enum.Attr.html  index.html  sidebar-items.js  type.AttrDisc.html
doc/minerva_voucher/cose_data/: enum.CoseError.html
doc/minerva_voucher/cose_sig/: fn.decode.html
doc/minerva_voucher/debug/: enum.CborType.html  enum.CoseError.html  fn.content_comp.html  fn.content_comp_permissive.html  fn.decode.html  fn.sig_one_struct_bytes_from.html  index.html  sidebar-items.js
doc/minerva_voucher/sid_data/: fn.content_comp_permissive.html
doc/minerva_voucher/voucher/: enum.VoucherError.html  struct.Voucher.html
doc/src/minerva_voucher/: attr.rs.html  cose_data.rs.html  cose_sig.rs.html  lib.rs.html  sid.rs.html  sid_data.rs.html  sign.rs.html  utils.rs.html  validate.rs.html  voucher.rs.html  yang.rs.html
docs/: settings.html  source-files.js
docs/doc/: search-index.js
docs/doc/minerva_voucher/: all.html  constant.ATTR_ASSERTION.html  constant.ATTR_CREATED_ON.html  constant.ATTR_IDEVID_ISSUER.html  constant.ATTR_PINNED_DOMAIN_PUBK_SHA256.html  constant.ATTR_SERIAL_NUMBER.html  index.html  (+5 more)
docs/minerva_voucher/: constant.ATTR_EXPIRES_ON.html  constant.ATTR_PINNED_DOMAIN_PUBK.html  constant.ATTR_PROXIMITY_REGISTRAR_PUBK_SHA256.html  enum.Assertion.html  sidebar-items.js  trait.Validate.html
examples/rust-mbedtls/: Cargo.toml  Makefile
examples/rust-mbedtls/src/: custom_voucher.rs  main.rs  support_rand.rs  utils.rs
src/: attr.rs  cose_data.rs  cose_sig.rs  lib.rs  sid.rs  sid_data.rs  sign.rs  tests.rs  utils.rs  validate.rs  voucher.rs  yang.rs
(+41 files in other folders)
