[package]
name = "minerva-voucher"
version = "0.6.1"
description = "Library to use BRSKI (https://datatracker.ietf.org/doc/html/rfc8995) Voucher in Rust"
edition = "2018"
authors = ["ANIMA Minerva toolkit"]

[lib]
name = "minerva_voucher"

[features]
default = ["sign", "validate"]
std = []

sign = ["v3"]
sign-lts = ["lts"]
validate = ["v3"]
validate-lts = ["lts"]

v3 = ["minerva-mbedtls/v3"]
lts = ["minerva-mbedtls"]

[dependencies]
mcu-if = { git = "https://github.com/AnimaGUS-minerva/mcu-if", rev = "6543b39" }

cose = { git = "https://github.com/j-devel/cose-rust", rev = "de0cf96", default-features = false }
#cose = { path = "../../j-devel/cose-rust", default-features = false }

minerva-mbedtls = { git = "https://github.com/AnimaGUS-minerva/minerva-mbedtls", rev = "08437df", default-features = false, optional = true }
#minerva-mbedtls = { path = "../../AnimaGUS-minerva/minerva-mbedtls", default-features = false, optional = true }
#minerva-mbedtls = { path = "../minerva-mbedtls", default-features = false, optional = true }

[dev-dependencies]
hex-literal = { git = "https://github.com/AnimaGUS-minerva/utils.git", branch = "allow-hash-comments-in-hex" }
